# lib-version

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  release.yml  releaseplease-bootstrap.yml
libversion/: __init__.py  version_util.py
tests/: test_version_util.py
