[metadata]
name = libversion
version = attr: libversion.get_version  # Dynamically reads the version using the get_version() function
description = A version-aware utility library for REMLA project

[options]
packages = find:                # Automatically find all packages
include_package_data = true     # Include non-code files (like VERSION)

[options.package_data]
* = VERSION                     # Include the VERSION file in all packages