[metadata]
name = libversion
# Use a fixed version string that can be updated by release-please in the future
version = 1.1.0-alpha.0
description = A version-aware utility library for REMLA project

[options]
# Automatically find all packages
packages = find:
# Include non-code files (like VERSION)
include_package_data = true
