[metadata]
name = libversion
# Dynamically reads the version using the get_version() function
version = attr: libversion.get_version
description = A version-aware utility library for REMLA project

[options]
# Automatically find all packages
packages = find:
# Include non-code files (like VERSION)
include_package_data = true

[options.package_data]
# Include the VERSION file in all packages
* = VERSION